--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ footer {
     padding: 20px;
 }
 .jumbotron {
+    margin: 0;
     padding: 30px;
     background-image: linear-gradient(to right, #5637dd, #3046c5, #60106b);
     color: white;
@@ -24,4 +25,7 @@ footer {
     border-bottom: 1px ridge;
     min-height: 200px;
 
+}
+.navbar{
+    background-color: #901CAD;
 }
