--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ h2 {
 header h2 {
     color:cornsilk;
 }
-footer {
+.site-footer {
     background-image: linear-gradient(#cec8ff,white);
     padding: 20px;
 }
